--- a/src/app/dashboard/component/side-nav/side-nav.component.html
+++ b/src/app/dashboard/component/side-nav/side-nav.component.html
@@ -3,11 +3,11 @@
   <!-- opened and mode attributes r provide by angular-material -->
   <mat-sidenav class="app-sidenav" [opened]="!isScreenSmall()" [mode]="isScreenSmall() ? 'over': 'push'" #sidenav>
     <mat-toolbar color="accent">Dashboard</mat-toolbar>
-    <mat-list>
-      <mat-list-item>1</mat-list-item>
-      <mat-list-item>2</mat-list-item>
-      <mat-list-item>3</mat-list-item>
-    </mat-list>
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="[link.url]" routerLinkActive="router-link-active" *ngFor="let link of links"
+        (click)="sidenav.close()">
+        {{ link.name }} </a>
+    </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content class="app-sidenav-content">
