--- a/src/app/dashboard/component/toolbar/toolbar.component.html
+++ b/src/app/dashboard/component/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button mat-button (click)="toogleMySideNavbar()" class="sidenav-toggle">
+  <button mat-button (click)="toogleMySideNavbar()" >
     <mat-icon>menu</mat-icon>
   </button>
   <span>Invoice Builder</span>
