--- a/src/app/invoices/component/invoice-listing/invoice-listing.component.html
+++ b/src/app/invoices/component/invoice-listing/invoice-listing.component.html
@@ -56,7 +56,7 @@
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item (click)="editClickHandler(element._id)">
           <mat-icon>edit</mat-icon>
           <span>Edit</span>
         </button>
